node-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
spec:
  selector:
    app: node-api
  ports:
    - name: api-web
      port: 80
      targetPort: api-web
  type: ClusterIP
